# factory-calc

./: .gitignore  package-lock.json  package.json
public/: index.html
rust-calc/: Cargo.toml
rust-calc/src/: damage.rs  data.rs  lib.rs  main.rs  pokemon.csv  run.rs
rust-calc/src/tests/: calculator_tests.rs  mod.rs
src/: App.css  App.tsx  Calculator.css  Calculator.js  Calculator.jsx  ExcludedSpeciesSelector.css  ExcludedSpeciesSelector.jsx  MoveSelection.jsx  OpponentSelector.jsx  SingleOpponentSelector.jsx  calc.worker.js  index.tsx
