[package]
name = "rust-calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "rust_calc"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ['console'] }
strum = "0.26.2"
strum_macros = "0.26.4"
bincode = {version = "2.0.0-rc.3"}
console_error_panic_hook = "0.1.7"

[profile.release]
lto = true
debug = true
